# quantsupport

./: .gitignore  Cargo.toml  Cargo_tmp.toml  README.md
benchmarks/: Cargo.toml
benchmarks/benches/: swap_pfe.rs
drawio/: schema.drawio
examples/: quantlib_benchmark.ipynb
examples/bootstrap/: Cargo.toml
examples/bootstrap/data/: curve_specs.json  quotes.json
examples/bootstrap/src/: main.rs
examples/cva/: Cargo.toml
examples/cva/data/: curve_specs.json  quotes.json  xva_config.json
examples/cva/src/: main.rs  utils.rs
examples/evaluator/: Cargo.toml
examples/evaluator/src/: main.rs  utilities.rs
examples/hullwhite/: Cargo.toml
examples/hullwhite/data/: curve_specs.json  hw_calibration.json  quotes.json
examples/hullwhite/src/: main.rs  utils.rs
examples/pfe/: Cargo.toml
examples/pfe/data/: curve_specs.json  fixings.json  quotes.json
examples/pfe/src/: main.rs  utils.rs
examples/sensitivity/: Cargo.toml  data_loading.py  display.py  ql_helpers.py  quantlib_benchmark.ipynb
examples/sensitivity/bechmark/: qs_results.json  sensitivity.ipynb  sensitivity_config.json
examples/sensitivity/data/: curve_specs.json  qs_results.json  quotes.json  rust_results.json
examples/sensitivity/src/: curves.rs  main.rs  output.rs  pricing.rs
examples/valuation/: Cargo.toml
examples/valuation/src/: main.rs
examples/volatilitysurface/: Cargo.toml
examples/volatilitysurface/data/: quotes.json
examples/volatilitysurface/src/: main.rs  utils.rs
quantsupport_macros/: Cargo.toml
quantsupport_macros/src/: lib.rs
rustatlas_macros/src/: lib.rs
src/: lib.rs  prelude.rs
src/ad/: adreal.rs  blocklist.rs  constant.rs  dual.rs  expr.rs  forward.rs  mod.rs  node.rs  scalar.rs  tape.rs
src/calibration/: calibrationpricer.rs  calibrationprocess.rs  mod.rs
src/core/: README.md  assetpresets.rs  assets.rs  collateral.rs  command.rs  contextmanager.rs  evaluationresults.rs  evaluator.rs  inmemorymarketdataprovider.rs  instrument.rs  marketdataelementowner.rs  marketdataprovider.rs  mod.rs  pillars.rs  pricer.rs  pricerstate.rs  pricingcontext.rs  pricingdata.rs  pricingrequest.rs  request.rs  trade.rs  visitable.rs
src/core/elements/: curveelement.rs  mod.rs  montecarlosimulationelement.rs  simulationelement.rs  volatilitycubelement.rs  volatilitysurfaceelement.rs
src/core/marketdatahandling/: constructedelementrequest.rs  constructedelementstore.rs  discountrequest.rs  fixingrequest.rs  forwardraterequest.rs  fxrequest.rs  marketdata.rs  mod.rs  pathdependentrequest.rs  spotrequest.rs
src/core/marketdatarequest/: curveelement.rs  derivedelementrequest.rs  mod.rs  simulationelement.rs  volatilityelements.rs
src/core2/: evaluationresults.rs  pricer.rs  pricingcontext.rs  trade.rs  visitable.rs
src/currencies/: currency.rs  currencydetails.rs  exchangeratestore.rs  mod.rs
src/deprecated/: readme.md
src/deprecated/cashflows/: simplecashflow.rs
src/deprecated/currencies/: enums.rs  traits.rs
src/deprecated/instruments/: instrument.rs
src/deprecated/interestrateindex/: iborindex.rs  indexstore.rs  overnightcompoundedrateindex.rs  overnightindex.rs  traits.rs
src/indices/: fxpair.rs  marketindex.rs  mod.rs  quotetype.rs  rateindex.rs
src/indices/rateindices/: aonia.rs  corra.rs  estr.rs  euribor.rs  icp.rs  mod.rs  nowa.rs  nzonia.rs  saron.rs  sofr.rs  sonia.rs  swestr.rs  tibor.rs  tonar.rs
src/instruments/: mod.rs
src/instruments/cashflows/: cashflow.rs  cashflowtype.rs  coupon.rs  coupons.rs  fixedratecoupon.rs  floatingratecoupon.rs  leg.rs  makeleg.rs  mod.rs  payoffops.rs  (+2 more)
src/marketdata/: fixingprovider.rs  fixingstore.rs  marketdataprovider.rs  mod.rs  quote.rs  quotestore.rs  surface.rs  volatility.rs  volatilitysurface.rs
src/math/: fft.rs  ifft.rs  linalg.rs  mod.rs
src/models/: brownianmotion.rs  geometricbrownianmotion.rs  hullwhite.rs  mod.rs  models.rs  montecarloengine.rs  sabr.rs  utils.rs
src/pricers/: generalpricers.rs  mod.rs  montecarloengine.rs  pricerdefinitions.rs  pricers.rs
src/quotes/: calibrationinstrument.rs  example_quotes.json  fixingstore.rs  fxstore.rs  mod.rs  quote.rs  quoteselector.rs  quotestore.rs
src/rates/: compounding.rs  interest_rate_curve.rs  interestrate.rs  mod.rs
src/simulation/: mod.rs
src/simulations/: mod.rs  simulation.rs
src/time/: calendar.rs  date.rs  daycounter.rs  enums.rs  imm.rs  mod.rs  period.rs  schedule.rs
src/utils/: errors.rs  mod.rs  plot.rs
src/visitors/: cashflowcompressorconstvisitor.rs  parvaluevisitordoublerateinstrument.rs
src/volatility/: interpolatedvolatilitycube.rs  interpolatedvolatilitysurface.rs  mod.rs  modelcalibration.rs  orientedfxvolsurface.rs  volatilitycube.rs  volatilitycubebuilder.rs  volatilitycubeconfiguration.rs  volatilityindexing.rs  volatilitysurface.rs  volatilitysurfacebuilder.rs  volatilitysurfaceconfiguration.rs
src/xva/: aggregator.rs  claimevaluationstrategy.rs  contigentclaim.rs  engine.rs  makecontigentclaim.rs  mod.rs  nettingset.rs
(+140 files in other folders)
