[workspace]
members = [".", "examples/bootstrap", "examples/valuation"]

[package]
name = "quantsupport"
version = "0.1.0"
edition = "2021"

description = "Rust library for fixed-income, derivative pricing and risk analytics."
license = "MIT"
repository = "https://github.com/jmelo11/quantsupport"
keywords = ["finance", "quant", "risk", "pricing", "derivatives"]
categories = ["finance", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
rayon = "1.7.0"
rand = "0.8.0"
thiserror = "1.0"
indicatif = "0.17.7"
bumpalo = "3.19.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

[lints.rust]
missing_docs = "forbid"
unreachable_patterns = "forbid"
unused_must_use = "forbid"
unused_import_braces = "forbid"
unconditional_recursion = "forbid"
unused_macro_rules = "forbid"
deprecated = "deny"

[lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
clone_on_copy = "forbid"
unwrap_used = "deny"
expect_used = "deny"
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
multiple_crate_versions = "allow" 
