[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
description = "Benchmarks for quantsupport"
license = "MIT"
repository = "https://github.com/jmelo11/quantsupport"
readme = "../README.md"
keywords = ["finance", "quant"]
categories = ["finance"]
publish = false

[dependencies]
quantsupport = { path = ".." }
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }

[[bench]]
name = "swap_pfe"
harness = false
