[package]
name = "bootstrap"
version = "0.1.0"
edition = "2024"
description = "Bootstrap example for quantsupport"
license = "MIT"
repository = "https://github.com/jmelo11/quantsupport"
readme = "../../README.md"
keywords = ["finance", "quant"]
categories = ["finance"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quantsupport = { path = "../../" }