[package]
name = "hullwhite"
version = "0.1.0"
edition = "2024"
description = "Hull-White model example for quantsupport"
license = "MIT"
repository = "https://github.com/jmelo11/quantsupport"
readme = "../../README.md"
keywords = ["finance"]
categories = ["finance"]
publish = false

[dependencies]
quantsupport = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3"
rand = "0.8"
