[package]
name = "pfe"
version = "0.1.0"
edition = "2021"
description = "PFE example for quantsupport"
license = "MIT"
repository = "https://github.com/jmelo11/quantsupport"
readme = "../../README.md"
keywords = ["finance"]
categories = ["finance"]
publish = false

[dependencies]
quantsupport = { path = "../../", features = ["plot"] }
plotters = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
